chore; use pnpm format
